[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprite/PlayerSprite.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Fundo.jpg" type="Texture" id=2]
[ext_resource path="res://Script/player.gd" type="Script" id=3]
[ext_resource path="res://Script/CriaInimigo.gd" type="Script" id=4]
[ext_resource path="res://Script/Pontos.gd" type="Script" id=5]
[ext_resource path="res://Script/Chao.gd" type="Script" id=6]
[ext_resource path="res://Script/Control.gd" type="Script" id=7]
[ext_resource path="res://Sprite/lifes.png" type="Texture" id=8]
[ext_resource path="res://Sons/Through Space.wav" type="AudioStream" id=9]
[ext_resource path="res://Sons/explosion.wav" type="AudioStream" id=10]
[ext_resource path="res://Sons/Tiro.wav" type="AudioStream" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 30.5947

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 451.181 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 438.703 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 354.501, 10 )

[node name="Node2D" type="Node2D"]
position = Vector2( 321.163, 709.146 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( -23.8422, -303.588 )
texture = ExtResource( 2 )

[node name="player" type="RigidBody2D" parent="."]
position = Vector2( -0.648438, 12.2 )
mode = 2
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="player2" type="Sprite" parent="player"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 0.166443, 0.131592 )
shape = SubResource( 1 )

[node name="TimerVeloP" type="Timer" parent="player"]
wait_time = 3.0
autostart = true

[node name="TimerTiro" type="Timer" parent="player"]
wait_time = 0.3

[node name="Musica" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Explosao" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="Tiro" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="Inimigo" type="Node2D" parent="."]
position = Vector2( 0, -692 )
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Inimigo"]
autostart = true

[node name="Pontos" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="Pontos"]
margin_left = -306.041
margin_top = -697.389
margin_right = -266.041
margin_bottom = -657.389
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pontos/Control"]
margin_right = 40.0
margin_bottom = 14.0
text = "Pontos:0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParedeE" type="Node2D" parent="."]
position = Vector2( -312, -393 )

[node name="StaticBody2D" type="StaticBody2D" parent="ParedeE"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeE/StaticBody2D"]
shape = SubResource( 2 )

[node name="ParedeD" type="Node2D" parent="."]
position = Vector2( 270, -372 )

[node name="StaticBody2D" type="StaticBody2D" parent="ParedeD"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeD/StaticBody2D"]
shape = SubResource( 3 )

[node name="Chao" type="Node2D" parent="."]
position = Vector2( -3, 93 )
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Chao"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chao/Area2D"]
shape = SubResource( 4 )

[node name="Explosao" type="AudioStreamPlayer" parent="Chao"]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_left = 438.0
margin_right = 478.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 54.0
margin_bottom = 46.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="player/TimerVeloP" to="player" method="_on_TimerVeloP_timeout"]
[connection signal="timeout" from="player/TimerTiro" to="player" method="_on_TimerTiro_timeout"]
[connection signal="timeout" from="Inimigo/Timer" to="Inimigo" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Chao/Area2D" to="Chao" method="_on_Area2D_area_entered"]
